--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-
   "engines": {
     "node": ">=11.0.0",
     "npm": ">=6.4.0"
   },
-
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.7.4",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
