--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "mongoose": "^6.7.4",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "@angular/cli": "^7.0.6",
+    "express-jwt": "^7.7.7",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "readline": "^1.3.0"
   }
 }
